--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ isort = "^5.12.0"
 pytest-asyncio = "^0.21.1"
 twine = "^4.0.2"
 ariadne-codegen = "^0.7.1"
+pre-commit = "^3.6.0"
 
 [build-system]
 requires = ["poetry-core"]
