--- a/ruff.toml
+++ b/ruff.toml
@@ -2,100 +2,26 @@ line-length = 88
 target-version = "py39"
 
 lint.select = [
-    # if adding a rule here that affects a sizeable portion of a codebase - consider adding it to ruff.precommit.toml first.
-    "C4", # flake8-comprehensions
-    "COM818",
-    "E711", # Comparison to None should be cond is None
-    "E712",
-    "E713",
-    "E714",
-    "E721",
-    "E722",
-    "E731",
-    "E902",
-    "E999",
-    "F401",
-    "F402",
-    "F403",
-    "F404",
-    "F405",
-    "F811",
-    "F821",
-    "F822",
-    "F823",
-    "F841",
-    "F901",
-    "I",
-    "S",
-    "N999",
-    "PLC3002",
-    "PLE0101",
-    "PLE0116",
-    "PLE0117",
-    "PLE0241",
-    "PLE0302",
-    "PLE0604",
-    "PLE0605",
-    "PLE1142",
-    "PLE1205",
-    "PLE1206",
-    "PLE1307",
-    "PLE1310",
-    "PLE1507",
-    "PLE2502",
-    "PLE2510",
-    "PLE2512",
-    "PLE2513",
-    "PLE2514",
-    "PLE2515",
-    "PLR0124",
-    "PLR0133",
-    "PLR0206",
-    "PLR1711",
-    "PLW0120",
-    "PLW0127",
-    "PLW0129",
-    "PLW0131",
-    "PLW0406",
-    "PLW0603",
-    "PLW0711",
-    "PLW1508",
-    "PLW1509",
-    "PLW2901",
-    "PLW3301",
-    "T100",
-    "TD",
-    "TID251",
-    "UP004",
-    "UP006",
-    "UP009",
-    "UP025",
-    "UP026",
-    "W191",
-    "W291",
-    "W292",
-    "W293",
-    "W605",
+    "E4", "E7", "E9", "F", "I", "B", "C4", "UP"
 ]
 
-lint.ignore = [
-    "S108", # Probable insecure usage of temporary file or directory: "/tmp/"
-    "S113", # Probable use of requests call without timeout
-    "S101", # Use of `assert` detected
-]
+lint.ignore = []
 
 force-exclude = true
 exclude = [
     ".git",
+    ".mypy_cache",
+    ".ruff_cache",
+    ".venv",
     "__pycache__",
-    "node_modules",
-    "venv",
-    "graphql_client"
+    "build",
+    "dist",
+    "synmetrix_graphql_client/graphql_client/",
 ]
 
 [lint.isort]
 lines-after-imports = 2
-known-first-party = ["app", "tests"]
+known-first-party = ["synmetrix_graphql_client"]
 lines-between-types = 1
 
 case-sensitive = true
