--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "synmetrix-graphql-client"
 version = "0.1.0"
 description = "A Python GraphQL client library for interacting with the Synmetrix API"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Synmetrix <hello@synmetrix.org>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "synmetrix_graphql_client"}]
@@ -11,17 +11,19 @@ packages = [{include = "synmetrix_graphql_client"}]
 python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
 python-dotenv = "^1.0.0"
 pydantic = "2.9.2"
-ariadne-codegen = "0.14.0"
 httpx = "0.27.2"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.3"
-black = "^23.11.0"
-isort = "^5.12.0"
-pytest-asyncio = "^0.21.1"
-twine = "^4.0.2"
-ariadne-codegen = "^0.7.1"
-pre-commit = "^3.6.0"
+black = "24.10.0"
+isort = "5.13.2"
+twine = "5.1.1"
+ariadne-codegen = "0.14.0"
+pre-commit = "4.0.1"
+
+[tool.poetry.group.test.dependencies]
+pytest = "8.3.3"
+pytest-asyncio = "0.24.0"
+pytest-mock = "3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
