--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ isort = "5.13.2"
 twine = "5.1.1"
 ariadne-codegen = "0.14.0"
 pre-commit = "4.0.1"
+pdoc3 = "0.11.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "8.3.3"
