fix: poetry insatll

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,4 @@ remote_schema_url = "http://localhost/v1/graphql"
 remote_schema_headers = { "X-Hasura-Admin-Secret" = "adminsecret" }
 
 [tool.poetry.scripts]
-generate-client = "ariadne_codegen"
+generate-client = "ariadne_codegen.main:main"
