--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
 python-dotenv = "^1.0.0"
 pydantic = "2.9.2"
 httpx = "0.27.2"
+PyJWT = "2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
